parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> statement
Rule 4     statement -> print_statement
Rule 5     statement -> assign_statement
Rule 6     statement -> if_statement
Rule 7     print_statement -> PRINT LPAREN expression RPAREN SEMICOLON
Rule 8     assign_statement -> ID EQUALS expression SEMICOLON
Rule 9     if_statement -> IF LPAREN expression RPAREN block
Rule 10    if_statement -> IF LPAREN expression RPAREN block ELSE block
Rule 11    block -> LBRACE statement_list RBRACE
Rule 12    expression -> expression PLUS expression
Rule 13    expression -> expression MINUS expression
Rule 14    expression -> expression TIMES expression
Rule 15    expression -> expression DIVIDE expression
Rule 16    expression -> expression LESS expression
Rule 17    expression -> expression GREATER expression
Rule 18    expression -> expression LEQ expression
Rule 19    expression -> expression GEQ expression
Rule 20    expression -> expression EQ expression
Rule 21    expression -> expression NEQ expression
Rule 22    expression -> expression AND expression
Rule 23    expression -> expression OR expression
Rule 24    expression -> NOT expression
Rule 25    expression -> LPAREN expression RPAREN
Rule 26    expression -> NUMBER
Rule 27    expression -> STRING
Rule 28    expression -> CHAR
Rule 29    expression -> BOOLEAN
Rule 30    expression -> ID

Terminals, with rules where they appear

AND                  : 22
BOOLEAN              : 29
CHAR                 : 28
DIVIDE               : 15
ELSE                 : 10
EQ                   : 20
EQUALS               : 8
GEQ                  : 19
GREATER              : 17
ID                   : 8 30
IF                   : 9 10
LBRACE               : 11
LEQ                  : 18
LESS                 : 16
LPAREN               : 7 9 10 25
MINUS                : 13
NEQ                  : 21
NOT                  : 24
NUMBER               : 26
OR                   : 23
PLUS                 : 12
PRINT                : 7
RBRACE               : 11
RPAREN               : 7 9 10 25
SEMICOLON            : 7 8
STRING               : 27
TIMES                : 14
error                : 

Nonterminals, with rules where they appear

assign_statement     : 5
block                : 9 10 10
expression           : 7 8 9 10 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 25
if_statement         : 6
print_statement      : 4
program              : 0
statement            : 2 3
statement_list       : 1 2 11

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement
    (4) statement -> . print_statement
    (5) statement -> . assign_statement
    (6) statement -> . if_statement
    (7) print_statement -> . PRINT LPAREN expression RPAREN SEMICOLON
    (8) assign_statement -> . ID EQUALS expression SEMICOLON
    (9) if_statement -> . IF LPAREN expression RPAREN block
    (10) if_statement -> . IF LPAREN expression RPAREN block ELSE block

    PRINT           shift and go to state 7
    ID              shift and go to state 8
    IF              shift and go to state 9

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    print_statement                shift and go to state 4
    assign_statement               shift and go to state 5
    if_statement                   shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (2) statement_list -> statement_list . statement
    (4) statement -> . print_statement
    (5) statement -> . assign_statement
    (6) statement -> . if_statement
    (7) print_statement -> . PRINT LPAREN expression RPAREN SEMICOLON
    (8) assign_statement -> . ID EQUALS expression SEMICOLON
    (9) if_statement -> . IF LPAREN expression RPAREN block
    (10) if_statement -> . IF LPAREN expression RPAREN block ELSE block

    $end            reduce using rule 1 (program -> statement_list .)
    PRINT           shift and go to state 7
    ID              shift and go to state 8
    IF              shift and go to state 9

    statement                      shift and go to state 10
    print_statement                shift and go to state 4
    assign_statement               shift and go to state 5
    if_statement                   shift and go to state 6

state 3

    (3) statement_list -> statement .

    PRINT           reduce using rule 3 (statement_list -> statement .)
    ID              reduce using rule 3 (statement_list -> statement .)
    IF              reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)
    RBRACE          reduce using rule 3 (statement_list -> statement .)


state 4

    (4) statement -> print_statement .

    PRINT           reduce using rule 4 (statement -> print_statement .)
    ID              reduce using rule 4 (statement -> print_statement .)
    IF              reduce using rule 4 (statement -> print_statement .)
    $end            reduce using rule 4 (statement -> print_statement .)
    RBRACE          reduce using rule 4 (statement -> print_statement .)


state 5

    (5) statement -> assign_statement .

    PRINT           reduce using rule 5 (statement -> assign_statement .)
    ID              reduce using rule 5 (statement -> assign_statement .)
    IF              reduce using rule 5 (statement -> assign_statement .)
    $end            reduce using rule 5 (statement -> assign_statement .)
    RBRACE          reduce using rule 5 (statement -> assign_statement .)


state 6

    (6) statement -> if_statement .

    PRINT           reduce using rule 6 (statement -> if_statement .)
    ID              reduce using rule 6 (statement -> if_statement .)
    IF              reduce using rule 6 (statement -> if_statement .)
    $end            reduce using rule 6 (statement -> if_statement .)
    RBRACE          reduce using rule 6 (statement -> if_statement .)


state 7

    (7) print_statement -> PRINT . LPAREN expression RPAREN SEMICOLON

    LPAREN          shift and go to state 11


state 8

    (8) assign_statement -> ID . EQUALS expression SEMICOLON

    EQUALS          shift and go to state 12


state 9

    (9) if_statement -> IF . LPAREN expression RPAREN block
    (10) if_statement -> IF . LPAREN expression RPAREN block ELSE block

    LPAREN          shift and go to state 13


state 10

    (2) statement_list -> statement_list statement .

    PRINT           reduce using rule 2 (statement_list -> statement_list statement .)
    ID              reduce using rule 2 (statement_list -> statement_list statement .)
    IF              reduce using rule 2 (statement_list -> statement_list statement .)
    $end            reduce using rule 2 (statement_list -> statement_list statement .)
    RBRACE          reduce using rule 2 (statement_list -> statement_list statement .)


state 11

    (7) print_statement -> PRINT LPAREN . expression RPAREN SEMICOLON
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression LESS expression
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LEQ expression
    (19) expression -> . expression GEQ expression
    (20) expression -> . expression EQ expression
    (21) expression -> . expression NEQ expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . NOT expression
    (25) expression -> . LPAREN expression RPAREN
    (26) expression -> . NUMBER
    (27) expression -> . STRING
    (28) expression -> . CHAR
    (29) expression -> . BOOLEAN
    (30) expression -> . ID

    NOT             shift and go to state 16
    LPAREN          shift and go to state 14
    NUMBER          shift and go to state 17
    STRING          shift and go to state 18
    CHAR            shift and go to state 19
    BOOLEAN         shift and go to state 20
    ID              shift and go to state 21

    expression                     shift and go to state 15

state 12

    (8) assign_statement -> ID EQUALS . expression SEMICOLON
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression LESS expression
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LEQ expression
    (19) expression -> . expression GEQ expression
    (20) expression -> . expression EQ expression
    (21) expression -> . expression NEQ expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . NOT expression
    (25) expression -> . LPAREN expression RPAREN
    (26) expression -> . NUMBER
    (27) expression -> . STRING
    (28) expression -> . CHAR
    (29) expression -> . BOOLEAN
    (30) expression -> . ID

    NOT             shift and go to state 16
    LPAREN          shift and go to state 14
    NUMBER          shift and go to state 17
    STRING          shift and go to state 18
    CHAR            shift and go to state 19
    BOOLEAN         shift and go to state 20
    ID              shift and go to state 21

    expression                     shift and go to state 22

state 13

    (9) if_statement -> IF LPAREN . expression RPAREN block
    (10) if_statement -> IF LPAREN . expression RPAREN block ELSE block
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression LESS expression
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LEQ expression
    (19) expression -> . expression GEQ expression
    (20) expression -> . expression EQ expression
    (21) expression -> . expression NEQ expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . NOT expression
    (25) expression -> . LPAREN expression RPAREN
    (26) expression -> . NUMBER
    (27) expression -> . STRING
    (28) expression -> . CHAR
    (29) expression -> . BOOLEAN
    (30) expression -> . ID

    NOT             shift and go to state 16
    LPAREN          shift and go to state 14
    NUMBER          shift and go to state 17
    STRING          shift and go to state 18
    CHAR            shift and go to state 19
    BOOLEAN         shift and go to state 20
    ID              shift and go to state 21

    expression                     shift and go to state 23

state 14

    (25) expression -> LPAREN . expression RPAREN
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression LESS expression
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LEQ expression
    (19) expression -> . expression GEQ expression
    (20) expression -> . expression EQ expression
    (21) expression -> . expression NEQ expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . NOT expression
    (25) expression -> . LPAREN expression RPAREN
    (26) expression -> . NUMBER
    (27) expression -> . STRING
    (28) expression -> . CHAR
    (29) expression -> . BOOLEAN
    (30) expression -> . ID

    NOT             shift and go to state 16
    LPAREN          shift and go to state 14
    NUMBER          shift and go to state 17
    STRING          shift and go to state 18
    CHAR            shift and go to state 19
    BOOLEAN         shift and go to state 20
    ID              shift and go to state 21

    expression                     shift and go to state 24

state 15

    (7) print_statement -> PRINT LPAREN expression . RPAREN SEMICOLON
    (12) expression -> expression . PLUS expression
    (13) expression -> expression . MINUS expression
    (14) expression -> expression . TIMES expression
    (15) expression -> expression . DIVIDE expression
    (16) expression -> expression . LESS expression
    (17) expression -> expression . GREATER expression
    (18) expression -> expression . LEQ expression
    (19) expression -> expression . GEQ expression
    (20) expression -> expression . EQ expression
    (21) expression -> expression . NEQ expression
    (22) expression -> expression . AND expression
    (23) expression -> expression . OR expression

    RPAREN          shift and go to state 25
    PLUS            shift and go to state 26
    MINUS           shift and go to state 27
    TIMES           shift and go to state 28
    DIVIDE          shift and go to state 29
    LESS            shift and go to state 30
    GREATER         shift and go to state 31
    LEQ             shift and go to state 32
    GEQ             shift and go to state 33
    EQ              shift and go to state 34
    NEQ             shift and go to state 35
    AND             shift and go to state 36
    OR              shift and go to state 37


state 16

    (24) expression -> NOT . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression LESS expression
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LEQ expression
    (19) expression -> . expression GEQ expression
    (20) expression -> . expression EQ expression
    (21) expression -> . expression NEQ expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . NOT expression
    (25) expression -> . LPAREN expression RPAREN
    (26) expression -> . NUMBER
    (27) expression -> . STRING
    (28) expression -> . CHAR
    (29) expression -> . BOOLEAN
    (30) expression -> . ID

    NOT             shift and go to state 16
    LPAREN          shift and go to state 14
    NUMBER          shift and go to state 17
    STRING          shift and go to state 18
    CHAR            shift and go to state 19
    BOOLEAN         shift and go to state 20
    ID              shift and go to state 21

    expression                     shift and go to state 38

state 17

    (26) expression -> NUMBER .

    RPAREN          reduce using rule 26 (expression -> NUMBER .)
    PLUS            reduce using rule 26 (expression -> NUMBER .)
    MINUS           reduce using rule 26 (expression -> NUMBER .)
    TIMES           reduce using rule 26 (expression -> NUMBER .)
    DIVIDE          reduce using rule 26 (expression -> NUMBER .)
    LESS            reduce using rule 26 (expression -> NUMBER .)
    GREATER         reduce using rule 26 (expression -> NUMBER .)
    LEQ             reduce using rule 26 (expression -> NUMBER .)
    GEQ             reduce using rule 26 (expression -> NUMBER .)
    EQ              reduce using rule 26 (expression -> NUMBER .)
    NEQ             reduce using rule 26 (expression -> NUMBER .)
    AND             reduce using rule 26 (expression -> NUMBER .)
    OR              reduce using rule 26 (expression -> NUMBER .)
    SEMICOLON       reduce using rule 26 (expression -> NUMBER .)


state 18

    (27) expression -> STRING .

    RPAREN          reduce using rule 27 (expression -> STRING .)
    PLUS            reduce using rule 27 (expression -> STRING .)
    MINUS           reduce using rule 27 (expression -> STRING .)
    TIMES           reduce using rule 27 (expression -> STRING .)
    DIVIDE          reduce using rule 27 (expression -> STRING .)
    LESS            reduce using rule 27 (expression -> STRING .)
    GREATER         reduce using rule 27 (expression -> STRING .)
    LEQ             reduce using rule 27 (expression -> STRING .)
    GEQ             reduce using rule 27 (expression -> STRING .)
    EQ              reduce using rule 27 (expression -> STRING .)
    NEQ             reduce using rule 27 (expression -> STRING .)
    AND             reduce using rule 27 (expression -> STRING .)
    OR              reduce using rule 27 (expression -> STRING .)
    SEMICOLON       reduce using rule 27 (expression -> STRING .)


state 19

    (28) expression -> CHAR .

    RPAREN          reduce using rule 28 (expression -> CHAR .)
    PLUS            reduce using rule 28 (expression -> CHAR .)
    MINUS           reduce using rule 28 (expression -> CHAR .)
    TIMES           reduce using rule 28 (expression -> CHAR .)
    DIVIDE          reduce using rule 28 (expression -> CHAR .)
    LESS            reduce using rule 28 (expression -> CHAR .)
    GREATER         reduce using rule 28 (expression -> CHAR .)
    LEQ             reduce using rule 28 (expression -> CHAR .)
    GEQ             reduce using rule 28 (expression -> CHAR .)
    EQ              reduce using rule 28 (expression -> CHAR .)
    NEQ             reduce using rule 28 (expression -> CHAR .)
    AND             reduce using rule 28 (expression -> CHAR .)
    OR              reduce using rule 28 (expression -> CHAR .)
    SEMICOLON       reduce using rule 28 (expression -> CHAR .)


state 20

    (29) expression -> BOOLEAN .

    RPAREN          reduce using rule 29 (expression -> BOOLEAN .)
    PLUS            reduce using rule 29 (expression -> BOOLEAN .)
    MINUS           reduce using rule 29 (expression -> BOOLEAN .)
    TIMES           reduce using rule 29 (expression -> BOOLEAN .)
    DIVIDE          reduce using rule 29 (expression -> BOOLEAN .)
    LESS            reduce using rule 29 (expression -> BOOLEAN .)
    GREATER         reduce using rule 29 (expression -> BOOLEAN .)
    LEQ             reduce using rule 29 (expression -> BOOLEAN .)
    GEQ             reduce using rule 29 (expression -> BOOLEAN .)
    EQ              reduce using rule 29 (expression -> BOOLEAN .)
    NEQ             reduce using rule 29 (expression -> BOOLEAN .)
    AND             reduce using rule 29 (expression -> BOOLEAN .)
    OR              reduce using rule 29 (expression -> BOOLEAN .)
    SEMICOLON       reduce using rule 29 (expression -> BOOLEAN .)


state 21

    (30) expression -> ID .

    RPAREN          reduce using rule 30 (expression -> ID .)
    PLUS            reduce using rule 30 (expression -> ID .)
    MINUS           reduce using rule 30 (expression -> ID .)
    TIMES           reduce using rule 30 (expression -> ID .)
    DIVIDE          reduce using rule 30 (expression -> ID .)
    LESS            reduce using rule 30 (expression -> ID .)
    GREATER         reduce using rule 30 (expression -> ID .)
    LEQ             reduce using rule 30 (expression -> ID .)
    GEQ             reduce using rule 30 (expression -> ID .)
    EQ              reduce using rule 30 (expression -> ID .)
    NEQ             reduce using rule 30 (expression -> ID .)
    AND             reduce using rule 30 (expression -> ID .)
    OR              reduce using rule 30 (expression -> ID .)
    SEMICOLON       reduce using rule 30 (expression -> ID .)


state 22

    (8) assign_statement -> ID EQUALS expression . SEMICOLON
    (12) expression -> expression . PLUS expression
    (13) expression -> expression . MINUS expression
    (14) expression -> expression . TIMES expression
    (15) expression -> expression . DIVIDE expression
    (16) expression -> expression . LESS expression
    (17) expression -> expression . GREATER expression
    (18) expression -> expression . LEQ expression
    (19) expression -> expression . GEQ expression
    (20) expression -> expression . EQ expression
    (21) expression -> expression . NEQ expression
    (22) expression -> expression . AND expression
    (23) expression -> expression . OR expression

    SEMICOLON       shift and go to state 39
    PLUS            shift and go to state 26
    MINUS           shift and go to state 27
    TIMES           shift and go to state 28
    DIVIDE          shift and go to state 29
    LESS            shift and go to state 30
    GREATER         shift and go to state 31
    LEQ             shift and go to state 32
    GEQ             shift and go to state 33
    EQ              shift and go to state 34
    NEQ             shift and go to state 35
    AND             shift and go to state 36
    OR              shift and go to state 37


state 23

    (9) if_statement -> IF LPAREN expression . RPAREN block
    (10) if_statement -> IF LPAREN expression . RPAREN block ELSE block
    (12) expression -> expression . PLUS expression
    (13) expression -> expression . MINUS expression
    (14) expression -> expression . TIMES expression
    (15) expression -> expression . DIVIDE expression
    (16) expression -> expression . LESS expression
    (17) expression -> expression . GREATER expression
    (18) expression -> expression . LEQ expression
    (19) expression -> expression . GEQ expression
    (20) expression -> expression . EQ expression
    (21) expression -> expression . NEQ expression
    (22) expression -> expression . AND expression
    (23) expression -> expression . OR expression

    RPAREN          shift and go to state 40
    PLUS            shift and go to state 26
    MINUS           shift and go to state 27
    TIMES           shift and go to state 28
    DIVIDE          shift and go to state 29
    LESS            shift and go to state 30
    GREATER         shift and go to state 31
    LEQ             shift and go to state 32
    GEQ             shift and go to state 33
    EQ              shift and go to state 34
    NEQ             shift and go to state 35
    AND             shift and go to state 36
    OR              shift and go to state 37


state 24

    (25) expression -> LPAREN expression . RPAREN
    (12) expression -> expression . PLUS expression
    (13) expression -> expression . MINUS expression
    (14) expression -> expression . TIMES expression
    (15) expression -> expression . DIVIDE expression
    (16) expression -> expression . LESS expression
    (17) expression -> expression . GREATER expression
    (18) expression -> expression . LEQ expression
    (19) expression -> expression . GEQ expression
    (20) expression -> expression . EQ expression
    (21) expression -> expression . NEQ expression
    (22) expression -> expression . AND expression
    (23) expression -> expression . OR expression

    RPAREN          shift and go to state 41
    PLUS            shift and go to state 26
    MINUS           shift and go to state 27
    TIMES           shift and go to state 28
    DIVIDE          shift and go to state 29
    LESS            shift and go to state 30
    GREATER         shift and go to state 31
    LEQ             shift and go to state 32
    GEQ             shift and go to state 33
    EQ              shift and go to state 34
    NEQ             shift and go to state 35
    AND             shift and go to state 36
    OR              shift and go to state 37


state 25

    (7) print_statement -> PRINT LPAREN expression RPAREN . SEMICOLON

    SEMICOLON       shift and go to state 42


state 26

    (12) expression -> expression PLUS . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression LESS expression
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LEQ expression
    (19) expression -> . expression GEQ expression
    (20) expression -> . expression EQ expression
    (21) expression -> . expression NEQ expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . NOT expression
    (25) expression -> . LPAREN expression RPAREN
    (26) expression -> . NUMBER
    (27) expression -> . STRING
    (28) expression -> . CHAR
    (29) expression -> . BOOLEAN
    (30) expression -> . ID

    NOT             shift and go to state 16
    LPAREN          shift and go to state 14
    NUMBER          shift and go to state 17
    STRING          shift and go to state 18
    CHAR            shift and go to state 19
    BOOLEAN         shift and go to state 20
    ID              shift and go to state 21

    expression                     shift and go to state 43

state 27

    (13) expression -> expression MINUS . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression LESS expression
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LEQ expression
    (19) expression -> . expression GEQ expression
    (20) expression -> . expression EQ expression
    (21) expression -> . expression NEQ expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . NOT expression
    (25) expression -> . LPAREN expression RPAREN
    (26) expression -> . NUMBER
    (27) expression -> . STRING
    (28) expression -> . CHAR
    (29) expression -> . BOOLEAN
    (30) expression -> . ID

    NOT             shift and go to state 16
    LPAREN          shift and go to state 14
    NUMBER          shift and go to state 17
    STRING          shift and go to state 18
    CHAR            shift and go to state 19
    BOOLEAN         shift and go to state 20
    ID              shift and go to state 21

    expression                     shift and go to state 44

state 28

    (14) expression -> expression TIMES . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression LESS expression
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LEQ expression
    (19) expression -> . expression GEQ expression
    (20) expression -> . expression EQ expression
    (21) expression -> . expression NEQ expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . NOT expression
    (25) expression -> . LPAREN expression RPAREN
    (26) expression -> . NUMBER
    (27) expression -> . STRING
    (28) expression -> . CHAR
    (29) expression -> . BOOLEAN
    (30) expression -> . ID

    NOT             shift and go to state 16
    LPAREN          shift and go to state 14
    NUMBER          shift and go to state 17
    STRING          shift and go to state 18
    CHAR            shift and go to state 19
    BOOLEAN         shift and go to state 20
    ID              shift and go to state 21

    expression                     shift and go to state 45

state 29

    (15) expression -> expression DIVIDE . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression LESS expression
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LEQ expression
    (19) expression -> . expression GEQ expression
    (20) expression -> . expression EQ expression
    (21) expression -> . expression NEQ expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . NOT expression
    (25) expression -> . LPAREN expression RPAREN
    (26) expression -> . NUMBER
    (27) expression -> . STRING
    (28) expression -> . CHAR
    (29) expression -> . BOOLEAN
    (30) expression -> . ID

    NOT             shift and go to state 16
    LPAREN          shift and go to state 14
    NUMBER          shift and go to state 17
    STRING          shift and go to state 18
    CHAR            shift and go to state 19
    BOOLEAN         shift and go to state 20
    ID              shift and go to state 21

    expression                     shift and go to state 46

state 30

    (16) expression -> expression LESS . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression LESS expression
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LEQ expression
    (19) expression -> . expression GEQ expression
    (20) expression -> . expression EQ expression
    (21) expression -> . expression NEQ expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . NOT expression
    (25) expression -> . LPAREN expression RPAREN
    (26) expression -> . NUMBER
    (27) expression -> . STRING
    (28) expression -> . CHAR
    (29) expression -> . BOOLEAN
    (30) expression -> . ID

    NOT             shift and go to state 16
    LPAREN          shift and go to state 14
    NUMBER          shift and go to state 17
    STRING          shift and go to state 18
    CHAR            shift and go to state 19
    BOOLEAN         shift and go to state 20
    ID              shift and go to state 21

    expression                     shift and go to state 47

state 31
